--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,1 +1,21 @@
-
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box
+  }
+  
+  
+  body {
+    font-family: 'Open Sans', sans-serif
+  }
+  
+  
+  .container {
+    max-width: 970px;
+    margin: auto
+  }
+  
+  img {
+    max-width: 100%;
+    height: auto
+  }
